<resources>
    <string name="app_icon_name" translatable="false">热点新闻</string>
    <string name="app_name">Hot News</string>
    <string name="app_user_id_key" translatable="false">userID</string>
    <string name="app_setting_preferences_filename" translatable="false">setting_preferences</string>
    <string name="app_user_detail_preferences_filename" translatable="false">user_detail_preferences</string>
    <string name="app_account_preferences_filename" translatable="false">account_preferences</string>
    <string name="app_menu_message">Message</string>
    <string name="app_menu_vip">Member</string>
    <string name="app_menu_theme">Theme</string>
    <string name="app_menu_collected">Collection</string>
    <string name="app_menu_friends">Friends</string>
    <string name="app_menu_location">Location</string>
    <string name="app_menu_about">About</string>
    <string name="app_menu_setting">Setting</string>
    <string name="app_menu_exit">Exit</string>
    <string name="app_welcome_skip">Skip</string>
    <string name="app_toolbar_back">Back</string>
    <string name="app_toolbar_title_user">Personal Center</string>
    <string name="app_toolbar_title_setting">Setting Center</string>
    <string name="app_toolbar_title_webview_detail">Detail</string>
    <string name="app_error_info">Sorry, the application has an error, please restart the app!</string>
    <string name="toast_net_invisible">Network is not connection !</string>
    <string name="tips_net_invisible">The network is not connected. Please check the network connection and try again.</string>
    <string name="tips_request_failed">Data acquisition failed, please check the network connection and API usage balance</string>
    <string name="toast_webview_no_url">Resource link does not exist</string>
    <string name="toast_app_data_request_failed">Data acquisition failed, please check network connection or Api usage balance</string>
    <string name="toast_app_data_request_no_more">No more data</string>
    <string name="toast_dialog_user_empty_content">Content cannot be empty</string>
    <string name="toast_menu_webview_share_tips">Copy share link to clipboard</string>
    <string name="toast_account_manager_logout_failed">Failed, please try again</string>
    <string name="toast_account_register_success">Congratulations, registration is successful</string>
    <string name="toast_account_register_failed">Registration failed, please try again</string>
    <string name="toast_account_login_failed">Username or password is incorrect</string>
    <string name="toast_account_user_no_exit">User does not exist, please register first</string>
    <string name="toast_setting_local_set_failed">Failed, please try again...</string>
    <string name="toast_setting_rating_tips">Submitted, thank you for your review!</string>
    <string name="toast_setting_feedback_tips">Submitted, thank you for your feedback!</string>
    <string name="toast_setting_feedback_empty">Content can\'t be empty</string>
    <string name="toast_setting_share_success">Copied application share link to clipboard</string>
    <string name="toast_setting_share_failed">Share failure, please try again</string>
    <string name="user_autograph">Autograph</string>
    <string name="user_nickname">NickName</string>
    <string name="user_sex">Gender</string>
    <string name="user_address">Address</string>
    <string name="user_phone">Telphone</string>
    <string name="user_hobby">Hobby</string>
    <string name="user_profile">Profile</string>
    <string name="user_more">More</string>
    <string name="user_account">Account Manager</string>
    <string name="user_no_login">Sign In</string>
    <string name="user_no_user">Sign In/Register</string>
    <string name="user_empty_autograph">Setting signature :</string>
    <string name="user_no_name">Set username</string>
    <string name="account_user_empty">Please sign in :</string>
    <string name="account_logging">Logging...</string>
    <string name="account_registering">Registering...</string>
    <string name="account_login">Login</string>
    <string name="account_login_username_hint">username</string>
    <string name="hint_password">password</string>
    <string name="account_register_username_hint">username</string>
    <string name="account_login_auto_hint">Automatic log-in</string>
    <string name="login_register">Register</string>
    <string name="login_forget_hint">Forget password ?</string>
    <string name="register_pwd_hint">least six digit</string>
    <string name="register_reader_protocol">Read and agree to the protocol</string>
    <string name="register_protocol">Protocol</string>
    <string name="account_manager_change">Switch account</string>
    <string name="account_manager_logout">Logout</string>
    <string name="account_manager_cancel">Cancel</string>
    <string name="about_specifications_title">一、 Software instruction</string>
    <string name="about_specifications_content">This software is for personal learning example software, not as a commercial use.The theme is a data display platform based on Internet services, and its main function is to view and share Internet news data.</string>
    <string name="about_right_title">二、 Copyright Statement：</string>
    <string name="about_right_content">JM (author) owns the copyright of this software, the copyright is the law of the People\'s Republic of China copyright law, the computer software protection ordinance and other Chinese laws and relevant international convention for the protection, any unauthorized commercial operations without authorization or other illegal ACTS, such as distribution, rental, sale, reverse compile the published procedures are all or part of the tort, will retain the rights of its legal liability shall be pursued in accordance with the law.</string>
    <string name="about_service_title">三、 Service statement</string>
    <string name="about_service_content_one">1. The software provides you with the following services or functions, including but not limited to: acquiring, browsing and sharing network news data.Some of the services will be provided by default when you first install the software and update the software. You can set default Settings according to the usage habits, unless otherwise specified, any function based on the enhancement or enhancement of the current service is subject to this clause unconditionally.</string>
    <string name="about_service_content_two">2. The use of this software includes access to network functions, will generate the corresponding traffic fees and the corresponding operators charge, in addition to no other fees.</string>
    <string name="about_service_content_three">3. The software is free of charge, and you are responsible for using the software at your own risk. You must guarantee that you have the right to use the required operating system and related services to the maximum extent permitted by law.</string>
    <string name="about_gratitude_title">四、 Thanks</string>
    <string name="about_gratitude_content_one">1. Thanks to the API data support provided by wanwei yiyuan (www.showapi.com).</string>
    <string name="about_gratitude_content_two">2. Thanks to the support of the original open source libraries (detailed in the GitHub source code agreement).</string>
    <string name="about_gratitude_content_three">3. Some of the ICONS in this software are from the open Internet platform. Thanks to the original author.</string>
    <string name="about_support_title">五、 Support and feedback</string>
    <string name="about_support_content_one">1. Project source code has been synchronized in GitHub warehouse, please support more, welcome Star.</string>
    <string name="about_support_content_two">2. Software download address: click here to download</string>
    <string name="about_support_content_three">3. If you have any suggestion, please send email to: jiangmingyx@gmail.com</string>
    <string name="about_copyright">Copyright© 2019 All JM Rights Reserved.</string>
    <string name="about_title">About Software</string>
    <string name="about_github_link">GitHub</string>
    <string name="about_download_link">download</string>
    <string name="menu_news_item_open_detail">News Detail</string>
    <string name="menu_news_item_open_other">Open other</string>
    <string name="menu_news_item_delete">Delete</string>
    <string name="menu_webview_refresh">Refresh</string>
    <string name="menu_webview_share">Share</string>
    <string name="menu_webview_open_other">Open other</string>
    <string name="share_title">Share to：</string>
    <string-array name="share_choose">
        <item>Copy share link</item>
        <item>Shareable applications</item>
    </string-array>
    <string name="share_news_detail_content">Hi, your friend recommended a news link to you, click here to see more details: </string>
    <string name="share_app_content_one">Hi, your friend recommended a software to you : </string>
    <string name="share_app_content_two">, Click the link, select the browser to open; or copy the link to the browser to open (the WeChat mechanism reasons, some WeChat users please copy and remove the link. 1 suffix and open).</string>
    <string name="dialog_login">LOGIN</string>
    <string name="dialog_confirm">OK</string>
    <string name="dialog_cancel">CANCEL</string>
    <string name="dialog_waring_tips">Tips</string>
    <string name="dialog_waring_content">This function is not yet open, please look forward to it!</string>
    <string name="dialog_no_login">Currently no users, please login first</string>
    <string name="dialog_clear_cache_title">Delete ?</string>
    <string name="dialog_clear_cache_confirm">Delete</string>
    <string name="pre_key_setting_version" translatable="false">version</string>
    <string name="pre_key_setting_feedback" translatable="false">feedback</string>
    <string name="pre_key_setting_reputation" translatable="false">reputation</string>
    <string name="pre_key_setting_share" translatable="false">share</string>
    <string name="pre_key_setting_auto_check_update" translatable="false">auto_check_update</string>
    <string name="pre_key_setting_hide_benefits" translatable="false">hid_benefits</string>
    <string name="pre_key_setting_open_notify" translatable="false">open_notify</string>
    <string name="pre_key_setting_auto_run" translatable="false">auto_run</string>
    <string name="pre_key_setting_local" translatable="false">local</string>
    <string name="pre_key_setting_clear_cache" translatable="false">clear_cache</string>
    <string name="pre_key_setting_app_out_clear" translatable="false">app_out_clear</string>
    <string name="pre_key_setting_app_wall" translatable="false">setting_app_wall</string>
    <string name="setting_basic">Basic</string>
    <string name="setting_senior">Advanced</string>
    <string name="setting_encourage">Rating</string>
    <string name="setting_other">Other</string>
    <string name="setting_basic_cache">Clear cache</string>
    <string name="setting_basic_out_clear">Clear cache on exit</string>
    <string name="setting_senior_update">Automatic check updates</string>
    <string name="setting_auto_run_on">on</string>
    <string name="setting_auto_run_off">off</string>
    <string name="setting_auto_run">Auto run</string>
    <string name="setting_local_title">Language settings</string>
    <string name="setting_senior_hid_benefits">Hidden benefits</string>
    <string name="setting_encourage_soure">Give me a good review</string>
    <string name="setting_encourage_share">Share it with friends</string>
    <string name="setting_other_feedbakc">@string/feedback</string>
    <string name="setting_app_wall">Application wall</string>
    <string name="setting_desc_hid_benefits">Open hidden welfare</string>
    <string name="setting_notify_is_open">Open notification</string>
    <string name="version">Version update</string>
</resources>