<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AboutActivity">
    <PreferenceCategory android:title="@string/setting_basic">
        <Preference
            android:key="@string/pre_key_setting_clear_cache"
            android:title="@string/setting_basic_cache"
            tools:summary="10 m" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pre_key_setting_app_out_clear"
            android:title="@string/setting_basic_out_clear" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pre_key_setting_open_notify"
            android:title="@string/setting_notify_is_open" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/pre_key_setting_auto_run"
            android:summaryOff="@string/setting_auto_run_off"
            android:summaryOn="@string/setting_auto_run_on"
            android:title="@string/setting_auto_run" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_senior">
        <Preference
            android:key="@string/pre_key_setting_local"
            android:title="@string/setting_local_title"
            tools:summary="简体中文" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pre_key_setting_hide_benefits"
            android:summary="@string/setting_desc_hid_benefits"
            android:title="@string/setting_senior_hid_benefits" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pre_key_setting_auto_check_update"
            android:title="@string/setting_senior_update" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/setting_encourage">
        <Preference
            android:key="@string/pre_key_setting_app_wall"
            android:title="@string/setting_app_wall" />
        <Preference
            android:key="@string/pre_key_setting_reputation"
            android:title="@string/setting_encourage_soure" />
        <Preference
            android:key="@string/pre_key_setting_share"
            android:title="@string/setting_encourage_share" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/setting_other">
        <Preference
            android:key="@string/pre_key_setting_feedback"
            android:title="@string/setting_other_feedbakc" />
        <Preference
            android:key="@string/pre_key_setting_version"
            android:title="@string/version"
            tools:summary="1.0.0"/>
    </PreferenceCategory>
</PreferenceScreen>